# Mesh2SDF

./: .gitignore  CMakeLists.txt  MeshSDF.cpp  MeshSDF.hpp  README.md  array3.hpp  main.cpp  mainQuery.cpp  makelevelset3.cpp  makelevelset3.h  types.hpp  util.cpp  util.hpp
